--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+img {
+  height: 100px;
+  width: 100px;
+}
