--- a/src/website/src/styles/App.scss
+++ b/src/website/src/styles/App.scss
@@ -1,27 +1,38 @@
-$base-color: #c6538c;
-$border-dark: rgba($base-color, 0.88);
+*{
+  margin: 0;
+  padding: 0;
+};
+body{
+  background-color: black;
+}
+ .grid *{
 
-code {
-  border: 1px solid $border-dark;
-}
-.App {
-  text-align: center;
-}
+  width: 70%;
 
-@media (prefers-reduced-motion: no-preference) {
-}
+  background-color: rgb(0, 0, 0);
+  
+ };
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+ .grid{
+  width: 100%;
+   display: grid;
+   margin-top: 18%;
+   margin-left: 3%;
+   grid-template-columns: repeat(4, 1fr);
+   grid-gap: 15px;
+  }
 
-.App-link {
-  color: #61dafb;
+ img{
+  display: block;
+  margin: 0px auto;
+ }
+ .img{
+  border: 0.5px solid white;
+  transition: 0.2s;
 }
+ .img:hover{
+  border: 0.5px solid white;
+  transform: translateY(-5px) translateX(-5px);
+  transition: 0.2s;
+  box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.2);
+ }
