adding Login and Register's form

--- a/src/website/src/styles/components/_homepage.scss
+++ b/src/website/src/styles/components/_homepage.scss
@@ -114,7 +114,7 @@
   border-radius: 10px;  
 }
 
-#dialog_register{
+#dialog_register, #dialog_login{
   position: absolute;
   top: 20%;
   left: 35%;
