--- a/src/website/src/styles/components/_homepage.scss
+++ b/src/website/src/styles/components/_homepage.scss
@@ -1,25 +1,32 @@
 *{ 
-  font-family: Verdana,Tahoma, sans-serif;
+  font-family: Verdana,Tahoma, sans-serif;  
+}
+
+body{
+  background-image: url(../../../public/assets/background.png);
 }
 .grid-container {
   width: 100%;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 
+
 .grid-container__img {
     width: 70%;
-    background-color: rgb(0, 0, 0);
   }
 }
 
 .grid-container__img {
 	display: block;
 	margin: 0px auto;
+  
 }
 .grid-container__div-img {
 	border: 1px solid white;
 	transition: 0.2s;
   margin: 20px;
+  background-color: black;
+
 
   &:hover {
     border: 0.5px solid white;
