--- a/src/website/src/styles/components/_modals.scss
+++ b/src/website/src/styles/components/_modals.scss
@@ -1,21 +1,53 @@
-#dialog_content{
-    background-color: rgb(255, 255, 255);
-    width: 200px;
-    height: 200px;
-    padding: 10px 20px 10px 20px;
-    margin: 10% auto;
-    border-radius: 10px;  
-  }
-  
-  #dialog_register, #dialog_login{
-    position: absolute;
-    top: 20%;
-    left: 35%;
-    border-radius: 10%;
-    
-  }
-  
-  dialog::backdrop {
-    backdrop-filter: blur(2px);
-  }
-  
+@mixin neon {
+	color: #fff;
+	text-shadow:  0 0 20px rgb(152, 153, 153);
+}
+dialog {
+	background: url("../../../public/assets/background.png");
+	width: 400px;
+	height: 400px;
+	position: absolute;
+	top: 30%;
+	left: 40%;
+	border-radius: 15%;
+	&::backdrop {
+		backdrop-filter: blur(10px);
+	}
+	h1 {
+		text-align: center;
+		padding: 20px;
+		color: #fff;
+		@include neon;
+	}
+}
+
+form input,
+form button {
+	display: block;
+	width: 50%;
+	margin: 0 auto;
+	border-radius: 5px;
+	border: none;
+	outline: none;
+	padding: 10px;
+	font-size: 15px;
+	margin: 10px auto;
+}
+
+form input {
+	box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #ffffff73;
+}
+
+form button {
+	background-color: rgb(0, 0, 0);
+	width: 200px;
+	height: 50px;
+	@include neon;
+	box-shadow: 0 0 10px  rgb(255, 255, 255);
+}
+
+p {
+	@include neon;
+	margin: 20px auto;
+	text-align: center;
+}
