--- a/src/website/src/styles/components/_homepage.scss
+++ b/src/website/src/styles/components/_homepage.scss
@@ -1,5 +1,5 @@
 * {
-	font-family: Verdana, Tahoma, sans-serif;
+	font-family: "Century Gothic";
 }
 
 body {
@@ -12,7 +12,6 @@ body {
 	position: relative;
 	width: 800px;
 	margin: 0 auto;
-	font-family: "Century Gothic", sans-serif;
 }
 
 .glitch:after {
