--- a/src/website/src/styles/components/_gamepage.scss
+++ b/src/website/src/styles/components/_gamepage.scss
@@ -1,34 +1,38 @@
-@import './modals';
-.post{
-    margin: 2% 30% 0% 2%;
-    border: 1px solid white;
-    height: 60%;  
-    overflow-y: auto;
-   
+@import "./modals";
+
+.title-game {
+	color: white;
+	height: 10vh;
 }
-.container-post{
-    display: flex;
-    flex-direction: column;
+.post-date {
+	float: left;
+	width: 70vw;
+	height: 100%;
 }
 
-.gamepost{ 
-    @include neon();
-    background-color: red;
-    margin: 2%;
-    border-radius: 20px;   
-    display: flex;     
-    padding: 10px; 
-    font-size: 20px;
-    border-style: double;
+.gamepost {
+	border: 1px solid white;
+	background-image: url("../../../public/assets/banner.jpg");
+	font-size: 20px;
+	margin: 1%;
+	border-radius: 50px;
+	display: flex;
+	p {
+		margin: 20px;
+		@include neon();
+	}
 }
 
-.gp-title{
-    flex: 0 0 70%;
+.gp-title {
+	flex: 0 0 70%;
+	text-align: start;
 }
-.gp-user_id{
-    flex: 0 1 auto; 
+.gp-user_id {
+	flex: 0 1 auto;
+    
 }
-.gp-valoration{
-    flex: 1 0 auto;
-    text-align: end;
+.gp-valoration {
+	flex: 1 0 auto;
+	text-align: end;
 }
+
