Addding a map for all forum's posts and all post's comments

--- a/src/website/src/styles/components/_postpage.scss
+++ b/src/website/src/styles/components/_postpage.scss
@@ -2,11 +2,14 @@
 	width: 50%;
 	background-color: grey;
 	border-radius: 20px;
-	margin-left: 30px;
+	margin: auto;
     p {
         margin: 10px;
         text-align: start;
     }
+	h1 {
+		text-align: center;
+	}
 }
 
 .title-publicpost {
