--- a/src/website/src/styles/components/_createpost.scss
+++ b/src/website/src/styles/components/_createpost.scss
@@ -2,79 +2,93 @@ $f-size: 40px;
 $b-grey: rgb(200, 200, 200);
 $br-20: 20px;
 @mixin is-style {
-	font-size: $f-size;
-	background-color: $b-grey;
-	border-radius: $br-20;
+    font-size: $f-size;
+    background-color: $b-grey;
+    border-radius: $br-20;
 }
 
 .title-create {
-	.title-edit {
-		p {
-			text-align: left;
-			font-size: $f-size;
-		}
-	}
-	.title-post {
-		width: 100vw;
-		height: 5vh;
-		display: flex;
-		align-items: center;
-		justify-content: space-around;
-	}
-	input {
-		width: 40vw;
-		height: 5vh;
-		border-radius: 100px;
-		font-size: 20px;
-	}
-	select {
-		width: 15vw;
-		height: 3vh;
-		font-size: 15px;
-		border-radius: 100px;
-	}
-	button {
-		max-width: 480px;
-		line-height: 20px;
-		min-width: 0px;
-		min-height: 40px;
-		color: black;
-		border-radius: 100px;
-		cursor: pointer;
-		font-size: 15px;
-		font-weight: 600;
-		justify-content: center;
-		align-items: center;
-		padding: 0px;
-		padding-left: 20px;
-		padding-right: 20px;
-		text-align: center;
-	}
+    .title-edit {
+        p {
+            text-align: center;
+            font-size: $f-size;
+        }
+    }
+    .title-post {
+        width: 100vw;
+        height: 5vh;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        span {
+            color: white;
+        }
+
+        input {
+            width: 40vw;
+            height: 5vh;
+            border-radius: 100px;
+            padding-left: 10px;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+
+        select {
+            margin-left: -100px;
+            width: 15vw;
+            height: 3vh;
+            font-size: 15px;
+            border-radius: 100px;
+        }
+        button {
+            max-width: 480px;
+            line-height: 20px;
+            min-width: 0px;
+            min-height: 40px;
+            color: black;
+            border-radius: 100px;
+            cursor: pointer;
+            font-size: 15px;
+            font-weight: 600;
+            justify-content: center;
+            align-items: center;
+            padding: 0px;
+            padding-left: 20px;
+            padding-right: 20px;
+            text-align: center;
+        }
+    }
 }
 
 .text-create {
-	display: flex;
-	justify-content: space-between;
-	margin: 30px;
+    display: flex;
+    justify-content: space-between;
+    margin: 30px;
 
-	.text-edit {
-		background-color: $b-grey;
-		width: 50%;
-		height: 600px;
-		max-height: 600px;
-		border-radius: 20px;
-		overflow-y: scroll;
-	}
-	.text-preview {
-		width: 50%;
-		background-color: grey;
-		border-radius: 20px;
-		margin-left: 30px;
-		.prev-post {
-			p {
-				margin: 10px;
-				text-align: start;
-			}
-		}
-	}
+    .text-edit {
+        background-color: $b-grey;
+        width: 50%;
+        height: 600px;
+        max-height: 600px;
+        border-radius: 20px;
+        overflow-y: hidden;
+    }
+    .text-preview {
+        width: 50%;
+        background-color: grey;
+        border-radius: 20px;
+        margin-left: 30px;
+        .prev-post {
+            p {
+                margin: 10px;
+                text-align: start;
+            }
+        }
+    }
+}
+ 
+.editorClassName {
+    height: 500px;
+    overflow-y: scroll;
 }
