--- a/src/website/src/styles/components/_navbar.scss
+++ b/src/website/src/styles/components/_navbar.scss
@@ -19,7 +19,7 @@
 		height: 100%;
 		float: left;
 	}
-	.search {
+	/* .search {
 		@include center-nav-items();
 		width: 60%;
     	margin-left: 150px;
@@ -51,7 +51,7 @@
 			border: none;
 			cursor: pointer;
 		}
-	}
+	} */
 	.btn {
 		width: 400px;
 		height: 100%;
