--- a/src/website/src/styles/components/_createpost.scss
+++ b/src/website/src/styles/components/_createpost.scss
@@ -1,94 +1,114 @@
 $f-size: 40px;
-$b-grey: rgb(200, 200, 200);
+$b-grey: rgba(200, 200, 200, 0.8);
 $br-20: 20px;
 @mixin is-style {
-    font-size: $f-size;
-    background-color: $b-grey;
-    border-radius: $br-20;
+	font-size: $f-size;
+	background-color: $b-grey;
+	border-radius: $br-20;
+}
+
+@mixin header-title {
+	height: 5vh;
+	font-size: 20px;
+	padding-left: 10px;
+	border-radius: 100px;
+	margin-left: 30px;
 }
 
 .title-create {
-    .title-edit {
-        p {
-            text-align: center;
-            font-size: $f-size;
-        }
-    }
-    .title-post {
-        width: 100vw;
-        height: 5vh;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        span {
-            color: white;
-        }
+	.title-edit {
+		p {
+			text-align: center;
+			font-size: $f-size;
+		}
+	}
+	.title-post {
+		height: 5vh;
+		display: flex;
+		align-items: center;
+		justify-content: first baseline;
+		span {
+			color: white;
+		}
 
-        input {
-            width: 40vw;
-            height: 5vh;
-            border-radius: 100px;
-            padding-left: 10px;
-            font-size: 20px;
-            font-weight: bold;
-        }
+		input {
+			width: 30%;
+			margin-left: 30px;
+			height: 5vh;
+			border-radius: 100px;
+			padding-left: 10px;
+			font-size: 20px;
+		}
 
-
-        select {
-            margin-left: -100px;
-            width: 15vw;
-            height: 3vh;
-            font-size: 15px;
-            border-radius: 100px;
-        }
-        button {
-            max-width: 480px;
-            line-height: 20px;
-            min-width: 0px;
-            min-height: 40px;
-            color: black;
-            border-radius: 100px;
-            cursor: pointer;
-            font-size: 15px;
-            font-weight: 600;
-            justify-content: center;
-            align-items: center;
-            padding: 0px;
-            padding-left: 20px;
-            padding-right: 20px;
-            text-align: center;
-        }
-    }
+		select {
+			margin-left: 30px;
+			width: 15%;
+			height: 5vh;
+			font-size: 20px;
+			padding-left: 10px;
+			border-radius: 100px;
+		}
+		button {
+			margin-left: 30px;
+			max-width: 480px;
+			line-height: 20px;
+			min-width: 0px;
+			min-height: 40px;
+			color: black;
+			border-radius: 100px;
+			cursor: pointer;
+			font-size: 15px;
+			font-weight: 600;
+			justify-content: center;
+			align-items: center;
+			padding: 0px;
+			padding-left: 20px;
+			padding-right: 20px;
+			text-align: center;
+		}
+		.btn-post {
+			margin-left: 35vw;
+			border: 1px solid black;
+		}
+		.btn-preview {
+			background-color: black;
+			color: white;
+			border: 1px solid white;
+		}
+	}
 }
 
 .text-create {
-    display: flex;
-    justify-content: space-between;
-    margin: 30px;
+	display: flex;
+	justify-content: space-between;
+	margin: 30px;
 
-    .text-edit {
-        background-color: $b-grey;
-        width: 50%;
-        height: 600px;
-        max-height: 600px;
-        border-radius: 20px;
-        overflow-y: hidden;
-    }
-    .text-preview {
-        width: 50%;
-        background-color: grey;
-        border-radius: 20px;
-        margin-left: 30px;
-        .prev-post {
-            p {
-                margin: 10px;
-                text-align: start;
-            }
-        }
-    }
+	.text-edit {
+		background-color: rgba(250, 250, 250, 0.8);
+		width: 50%;
+		height: 600px;
+		max-height: 600px;
+		border-radius: 20px;
+		overflow-y: hidden;
+		color: black;
+		border: 1px solid black;
+	}
+	.text-preview {
+		width: 50%;
+		border: 1px solid white;
+		background-color: rgba(20, 20, 20, 0.8);
+		border-radius: 20px;
+		margin-left: 30px;
+		.prev-post {
+			p {
+				margin: 10px;
+				text-align: start;
+			}
+		}
+	}
 }
- 
+
 .editorClassName {
-    height: 500px;
-    overflow-y: scroll;
+	height: 500px;
+	overflow-y: scroll;
 }
