--- a/src/website/src/styles/components/_postpage.scss
+++ b/src/website/src/styles/components/_postpage.scss
@@ -1,8 +1,3 @@
-div {
-	/* border: 1px solid red; */
-	color: white;
-}
-
 .header-post {
 	display: flex;
 	margin: 10px 50px 0px 30px;
@@ -10,6 +5,7 @@ div {
 		flex: 2;
 		background-color: rgba(20, 20, 20, 0.8);
 		border-radius: 25px;
+		border: 1px solid white;
 		p {
 			text-align: start;
 			margin-left: 30px;
@@ -37,9 +33,15 @@ div {
 		.clickeado {
 			background-color: black;
 			color: white;
+			border: 1px solid white;
 		}
 		button:hover {
 			background-color: black;
+			color: white;
+		}
+		.delete-post {
+			margin-left: 30px;
+			background-color: rgb(153, 44, 44);
 			color: white;
 		}
 	}
@@ -48,16 +50,18 @@ div {
 .container-post {
 	display: flex;
 	margin-top: 20px;
+
 	.body-post {
 		flex: 2;
 		padding-left: 30px;
-	
+
 		.prev-post {
 			background-color: rgba(20, 20, 20, 0.8);
 			border-radius: 25px;
 			padding: 15px;
 			min-height: 560px;
 			height: auto;
+			border: 1px solid white;
 			p {
 				text-align: start;
 			}
@@ -97,10 +101,9 @@ div {
 		}
 		.user-comment {
 			border-radius: 25px;
-			margin-top: 5px;
+
 			display: flex;
 			justify-content: center;
-			/* background: rgba(238, 238, 238, 0.8); */
 
 			textarea {
 				background: rgba(240, 240, 240, 0.8);
@@ -114,7 +117,7 @@ div {
 				overflow-y: hidden;
 			}
 			button {
-				padding: 20px 40px; 
+				padding: 20px 40px;
 				border-radius: 200px;
 				font-size: 15px;
 				font-weight: bold;
