--- a/src/website/src/styles/styles.scss
+++ b/src/website/src/styles/styles.scss
@@ -1,4 +1,12 @@
 @import './base/base';
+@import './base/variables';
 
 // components
-@import './components/homepage'
+@import './components/homepage';
+@import './components/navbar';
+@import './components/modals';
+@import './components/gameblock';
+@import './components/gamepage';
+@import './components/createpost';
+@import './components/postpage';
+
