--- a/src/website/src/styles/components/_navbar.scss
+++ b/src/website/src/styles/components/_navbar.scss
@@ -25,19 +25,23 @@
 		height: 100%;
 		@include center-nav-items();
 		button {
+			@include center-nav-items();
 			@include bg-gradient();
-			text-decoration: none;
-			align-items: center;
+			border: 0;
 			border-radius: 100px;
 			box-sizing: border-box;
 			color: #ffffff;
 			cursor: pointer;
-			display: inline-flex;
 			font-size: 15px;
-			justify-content: center;
+			font-weight: 600;			
+			line-height: 20px;
+			max-width: 480px;
+			min-height: 40px;
+			min-width: 0px;
+			padding: 0px;
 			padding-left: 20px;
 			padding-right: 20px;
-			text-align: center;
+			
 		}
 	}
 	a:link,
